# haskell-servant-realworld-example-app

./: LICENSE  README.md  haskell-servant-realworld-example-app.cabal  stack.yaml
scripts/: schema.sql
src/: DB.hs  Main.hs  Types.hs
