name:                haskell-servant-realworld-example-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dorlowd/haskell-servant-realworld-example-app#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Orłowski
maintainer:          orlowd+gh@gmail.com
copyright:           2017 Daniel Orłowski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-servant-realworld-example-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , servant
                     , servant-server
                     , mtl
                     , wai
                     , warp
                     , aeson
                     , sqlite-simple
                     , jwt
                     , containers
                     , bytestring
  other-modules: Types, DB
